[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameOverScreen.gd" type="Script" id=1]
[ext_resource path="res://fonts/SigmarOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/MenuItem.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="GameOverScreen" type="ColorRect"]
margin_right = 720.0
margin_bottom = 400.0
color = Color( 0.501961, 0.501961, 0.501961, 0.501961 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 661.0
margin_bottom = 349.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 629.0
margin_bottom = 119.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 82.0
margin_right = 547.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 123.0
margin_right = 629.0
margin_bottom = 247.0
size_flags_horizontal = 3
columns = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_right = 399.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 3 )
text = "Survival Time: "

[node name="SurvivalTime" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 403.0
margin_right = 629.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 3 )
text = "42 seconds"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 64.0
margin_right = 399.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 3 )
text = "Ducks Eliminated: "

[node name="DucksEliminated" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 403.0
margin_top = 64.0
margin_right = 629.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 3 )
text = "123"

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 251.0
margin_right = 629.0
margin_bottom = 317.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DoneButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer2"]
margin_left = 254.0
margin_right = 374.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 3 )
text = "Done"
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer2/DoneButton" to="." method="_on_DoneButton_pressed"]
